master: letter spacing fix in sidebar

--- a/app/assets/stylesheets/spree/frontend/sidebar.scss
+++ b/app/assets/stylesheets/spree/frontend/sidebar.scss
@@ -37,6 +37,7 @@
         display: block;
         padding: 5px 5px 5px 36px;
         color: #555 !important;
+        letter-spacing: 1px !important;
 
         &:hover { color: #000 !important; }
       }
